Fix crash when double clicking on terminal scroll bar

Only one QPainter can be active at a time, and QScrollBar's paint event
will use its own internally.  So call the base class before doing any of
our own painting.  As a side effect, this means that the search markers
(originally painted first) are not overwritten by the main scroll bar,
and both those and position markers are shown.

BUG:501191